# FitnessChatbot

./: .env.example  .gitignore  KiroCLITranscript.txt  README.md  pyproject.toml
data/knowledge/: gym_info.md  hrvatskivzb.txt  rag_podaci_1.txt  rag_podaci_3.txt
src/fitness_chatbot/: __init__.py  client.py  config.py  conversation.py  main.py  prompt.py
src/fitness_chatbot/rag/: __init__.py  ingest.py  retrieve.py  vector_store.py
