[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitness-chatbot"
version = "0.1.0"
description = "Terminal fitness coach powered by local Ollama with always-on RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
]

[project.scripts]
fitness-chat = "fitness_chatbot.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/fitness_chatbot"]

[tool.hatch.build.targets.sdist]
packages = ["src/fitness_chatbot"]
